...
          <Image source={ImageLookup[logoImageName]} style={headerStyles.logo} />
        </TouchableOpacity>
        <View style={headerStyles.sideButtonWrapper}>
          {!hideSettingsButton &&
            <ImageButton imageName='user' imageType='icon'
              styles={_styleSettingsButton}
              testID="header-settings-button"
              onPress={() => {
                // Check if user is authenticated to decide navigation
                if (appState.user.isAuthenticated) {
                  changeState('Settings'); // Go to profile/settings page
                } else {
                  changeState('Login'); // Go to login page
...
