...
export const assetsInfo = {
  'BTC': {
    name: 'Bitcoin',
    type: 'crypto',
    decimalPlaces: 8,
    displaySymbol: 'BTC',
    displayString: 'BTC (Bitcoin)',
  },
  'ETH': {
    name: 'Ethereum',
    type: 'crypto',
    decimalPlaces: 8,
    displaySymbol: 'ETH',
...
