...
  'Transfer',

  'History',
  'Send',
  'Receive',
  'Notifications',
  'Settings',
  'Test',
  'Login',
  'PIN',
  'ChooseHowToPay',
  'MakePayment',
  'WaitingForPayment',
...
  'AccountRestricted',
  'NavigationDebug',
  'AccountReview',
  'SelfCategorisation',
  'Questionnaire',
  'AddressBook',
  'Wallet',
  'DepositInstructions',
  'RiskSummary',
];

export default mainPanelStates;

